spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-fabric8-client-istio/src/test/resources/istioctl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ctl
  labels:
    app: istio-ctl
spec:
  selector:
    matchLabels:
      app: istio-ctl
  template:
    metadata:
      labels:
        app: istio-ctl
    spec:
      containers:
        - name: istio-ctl
          image: istio/istioctl:1.20.1
          imagePullPolicy: IfNotPresent
          command: [ "/bin/bash" ]
          args: [ "-c", "trap : TERM INT; sleep infinity & wait" ]
